Se desacoplan los styles de terceros para que pueda ser reutilizado

--- a/src/scss/_ksass.scss
+++ b/src/scss/_ksass.scss
@@ -1,12 +1,8 @@
 @charset "UTF-8";
-
 /*!
 * Ksass - Template SASS/CSS para aplicaciones de konecta
 */
-
 @import "variables";
-@import "../vendors/bootstrap-sass/assets/stylesheets/bootstrap";
-@import "../vendors/fontawesome/scss/font-awesome";
 //estilos propios
 @import "switch";
 @import "home";
@@ -17,3 +13,4 @@
 @import "tabs";
 @import "breadcrumbs";
 @import "fonts";
+@import "tables";
