se añade el style para las tablas

--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -4,6 +4,7 @@
     border: 1px solid $pane-gray-border;
     color: $text-color;
     margin-bottom: 15px;
+    margin-top: 15px;
     border-radius: 4px;
     .top-block {
         .title-top {
