se añade la directiva que dinamiza el sidebar
* Permite colapsar y comprimir el sidebar
* Permite recordar la selección del usuario

--- a/src/partials/static/header-partial.html
+++ b/src/partials/static/header-partial.html
@@ -42,7 +42,12 @@
             <li>
                 <a href="/"><i class="fa fa-fw fa-edit"></i> Forms</a>
             </li>
+            <a class="btn action">
+                <i class="fa fa-angle-double-left"></i>
+            </a>
         </ul>
+
+
     </div>
     <!-- /.navbar-collapse -->
 </nav>
