--- a/src/scss/_tabs.scss
+++ b/src/scss/_tabs.scss
@@ -19,3 +19,13 @@
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
 }
+.nav-tabs {
+    li {
+        cursor: pointer;
+    }
+    li:hover {
+        a {
+            color: $text-color;
+        }
+    }
+}
