se añaden los iconos a los botones del form

--- a/src/partials/forms-partial.html
+++ b/src/partials/forms-partial.html
@@ -57,7 +57,7 @@
                 <i class="fa fa-mail-reply" aria-hidden="true"></i> Atras
             </a>
             <div class="btn-divider">&nbsp;</div>
-            <a class="btn btn-default">Guardar</a>
+            <a class="btn btn-default"><i class="fa fa-save"></i>&nbsp;Guardar</a>
         </div>
 
     </section>
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <hr>
-                    <a class="btn btn-default">Guardar</a>
+                    <a class="btn btn-default"><i class="fa fa-save"></i>&nbsp;Guardar</a>
                 </form>
             </section>
 
