--- a/src/partials/home-partial.html
+++ b/src/partials/home-partial.html
@@ -3,3 +3,4 @@
 <div ng-include="'partials/button-partial.html'"></div>
 <div ng-include="'partials/breadcrumbs-partial.html'"></div>
 <div ng-include="'partials/forms-partial.html'"></div>
+<div ng-include="'partials/messages-partial.html'"></div>
