se añadieron botones que disparan los messagebox

--- a/src/partials/messages-partial.html
+++ b/src/partials/messages-partial.html
@@ -6,18 +6,24 @@
 <code>
     Message.ok("La operación finalizó exitosamente");
 </code>
+<br/>
+<a class="btn" onclick="Message.ok('La operación finalizó exitosamente')">Probar</a>
 
 <h2>Mesajes de error</h2>
 <code>
     Message.error("La operación falló");
 </code>
-
+<br/>
+<a class="btn" onclick="Message.error('La operación falló')">Probar</a>
 <h2>Mesajes de atención</h2>
 <code>
     Message.warning("El campo nombre es nulo!");
 </code>
-
+<br/>
+<a class="btn" onclick="Message.warning('El campo nombre es nulo!')">Probar</a>
 <h2>Mesajes de aviso</h2>
 <code>
     Message.info("La operación está en ejecución");
 </code>
+<br/>
+<a class="btn" onclick="Message.info('La operación está en ejecución')">Probar</a>
