--- a/src/partials/static/header-partial.html
+++ b/src/partials/static/header-partial.html
@@ -11,7 +11,7 @@
     </div>
 
     <!-- Top Menu Items -->
-    <ul class="nav navbar-right top-nav">
+    <ul class="nav navbar-right top-nav hidden-xs">
 
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Juan Perez <b class="caret"></b></a>
@@ -42,6 +42,18 @@
             <li>
                 <a href="/"><i class="fa fa-fw fa-edit"></i> Forms</a>
             </li>
+            <li role="separator" class="hidden-sm hidden-md hidden-lg divider"></li>
+            <li class="hidden-sm hidden-md hidden-lg">
+                <a> <i class="fa fa-fw fa-user"></i> Juan Perez </a>
+            </li>
+            <li role="separator" class="hidden-sm hidden-md hidden-lg divider"></li>
+            <li class="hidden-sm hidden-md hidden-lg">
+                <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+            </li>
+            <li class="hidden-sm hidden-md hidden-lg">
+                <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+            </li>
+
             <a class="btn action">
                 <i class="fa fa-angle-double-left"></i>
             </a>
