Se modifica el style para que si el primer elemento se encuentra activo, se renderice de forma correcta.

--- a/src/scss/_breadcrumbs.scss
+++ b/src/scss/_breadcrumbs.scss
@@ -88,7 +88,13 @@ ul.wizard-breadcrumbs {
                 border-left: 1em solid $pane-bg;
             }
         }
+        &:first-child{
+            a::before {
+                border-color: $pane-bg $pane-bg $pane-bg $pane-bg;
+            }
+        }
     }
+
 }
 @media(max-width:768px) {
     //@media only screen and (min-width: 220px) and (max-width: 540px) {
