Se corrige el padding de la ayuda de los form-wrapper

--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -15,7 +15,8 @@
             color: $pane-color;
         }
         p {
-            padding: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
         }
     }
     .wrapper {
