Se agrega path en controladores bases

--- a/src/partials/templates/form-template.html
+++ b/src/partials/templates/form-template.html
@@ -4,7 +4,7 @@
     <div class="wizard">
         <ul class="wizard-breadcrumbs">
             <li>
-                <a href="#!{{uri}}" ng-transclude="titulo">Cambiar Titulo</a>
+                <a href="#!{{path}}" ng-transclude="titulo">Cambiar Titulo</a>
             </li>
             <li class="active">
                 <a>{{recurso.nombre}} <span class="badge">2</span></a>
@@ -27,7 +27,7 @@
         </section>
 
         <hr/>
-        <a href="#!{{uri}}" class="btn btn-default">
+        <a href="#!{{path}}" class="btn btn-default">
             <i class="fa fa-mail-reply" aria-hidden="true"></i> Atras
         </a>
     </section>
