--- a/src/partials/templates/view-template.html
+++ b/src/partials/templates/view-template.html
@@ -4,7 +4,7 @@
     <div class="wizard">
         <ul class="wizard-breadcrumbs">
             <li>
-                <a href="#!{{uri}}">Empresas</a>
+                <a href="#!{{path}}">Empresas</a>
             </li>
             <li class="active">
                 <a>{{recurso.nombre}} <span class="badge">2</span></a>
@@ -28,7 +28,7 @@
         </form>
 
         <hr/>
-        <a href="#!{{uri}}" class="btn btn-default">
+        <a href="#!{{path}}" class="btn btn-default">
             <i class="fa fa-mail-reply" aria-hidden="true"></i> Atras
         </a>
     </section>
