bug en template

--- a/src/partials/templates/list-template.html
+++ b/src/partials/templates/list-template.html
@@ -46,6 +46,6 @@
                 </table>
                 <div class="tasty-pagination-responsive" tasty-pagination=""></div>
             </div>
-            <hr><a class="btn btn-default" href="#!/{{path}}/crear"><i class="fa fa-plus"></i> Agregar</a></section>
+            <hr><a class="btn btn-default" href="#!{{path}}crear"><i class="fa fa-plus"></i> Agregar</a></section>
     </section>
 </div>
