se corrige el nombre de la función darken

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,23 +7,23 @@
 $text-color: #333538 !default;
 $text-invert-color: #fff !default;
 $pane-bg:#a94442 !default; //#A71F2A;
-$pane-active-bg: darker($pane-bg, 5%); //#98252f;
-$pane-border: darker($pane-bg, 30%); //#873635;
-$pane-color:$text-invert-color;
-$pane-invert-bg:#222 !default;
+$pane-active-bg: darken($pane-bg, 5%) !default; //#98252f;
+$pane-border: darken($pane-bg, 10%) !default; //#873635;
+$pane-color:$text-invert-color !default;
+$pane-invert-bg:#222 !default ;
 $pane-invert-active-bg:#1a1a1a !default;
 $pane-invert-border:#1e1e1e !default;
 $pane-gray-bg:#f4f4f4 !default;
 $pane-gray-color:#868b91 !default;
 $pane-gray-border:#dce1e8 !default;
-$active-color: $pane-bg; //#465f6e;
-$active-border: $pane-border; //#27404d;
+$active-color: $pane-bg !default; //#465f6e;
+$active-border: $pane-border !default; //#27404d;
 
 /**
 * Colores base
 */
 
-$brand-primary:$pane-bg;
+$brand-primary:$pane-bg !default;
 $link-color:$text-color;
 $link-hover-color:$text-invert-color;
 $brand-success: #5cb85c !default;
@@ -31,7 +31,7 @@ $brand-info: #5bc0de !default;
 $brand-warning: #f0ad4e !default;
 $brand-danger: #d9534f !default;
 //se seobrescriben los colores de boostrap
-//override navbar 
+//override navbar
 $navbar-default-bg:$pane-bg;
 $navbar-default-active-bg:$pane-active-bg;
 $navbar-default-border: $pane-border;
