--- a/src/partials/templates/list-template.html
+++ b/src/partials/templates/list-template.html
@@ -1,43 +1,45 @@
 <!-- @autor:juan benitez   @mail:juan.benitez@konecta.com.py -->
-<div class="col-md-12">
-    <br>
+<div>
+    <br/>
     <breadcrumb-directive></breadcrumb-directive>
-    <nav class="col-md-3">
-        <div class="form-wrapper">
-            <div class="top-block">
-                <h2 class="title-top">Filtros</h2>
-                <p>Criterios de b&#xFA;squeda.</p>
+    <div class="row">
+        <nav class="col-md-3">
+            <div class="form-wrapper">
+                <div class="top-block">
+                    <h2 class="title-top">Filtros</h2>
+                    <p>Criterios de b&#xFA;squeda.</p>
+                </div>
+                <div class="form">
+                    <div ng-transclude="filtros"></div>
+                    <hr><a class="btn btn-default" ng-click="limpiar()"><i class="fa fa-ban"></i>&#xA0;Limpiar</a></div>
             </div>
-            <div class="form">
-                <div ng-transclude="filtros"></div>
-                <hr><a class="btn btn-default" ng-click="limpiar()"><i class="fa fa-ban"></i>&#xA0;Limpiar</a></div>
-        </div>
-    </nav>
-    <section class="col-md-9">
-        <section class="form-wrapper">
-            <div class="top-block">
-                <h2 class="title-top" ng-transclude="titulo">Cambiar Titulo</h2>
-                <p ng-transclude="descripcion">Cambiar descripcion</p>
-            </div>
-            <div class="wrapper table-responsive" tasty-table="" bind-resource-callback="getResource " bind-init="init "
-                bind-filters="filterBy ">
-                <table class="table table-striped">
-                    <div ng-transclude="tabla"></div>
-                    <tfoot>
-                        <tr ng-if="loading == true">
-                            <td colspan="{{config.header.length}}">
-                                <loading></loading>
-                            </td>
-                        </tr>
-                        <tr ng-if="loading == null">
-                            <td colspan="{{config.header.length}}">
-                                <no-data></no-data>
-                            </td>
-                        </tr>
-                    </tfoot>
-                </table>
-                <div class="tasty-pagination-responsive" tasty-pagination=""></div>
-            </div>
-            <hr><a class="btn btn-default" href="#!{{path}}/crear"><i class="fa fa-plus"></i> Agregar</a></section>
-    </section>
+        </nav>
+
+        <section class="col-md-9">
+            <section class="form-wrapper">
+                <div class="top-block">
+                    <h2 class="title-top" ng-transclude="titulo">Cambiar Titulo</h2>
+                    <p ng-transclude="descripcion">Cambiar descripcion</p>
+                </div>
+                <div class="wrapper table-responsive" tasty-table="" bind-resource-callback="getResource " bind-init="init " bind-filters="filterBy ">
+                    <table class="table table-striped">
+                        <div ng-transclude="tabla"></div>
+                        <tfoot>
+                            <tr ng-if="loading == true">
+                                <td colspan="{{config.header.length}}">
+                                    <loading></loading>
+                                </td>
+                            </tr>
+                            <tr ng-if="loading == null">
+                                <td colspan="{{config.header.length}}">
+                                    <no-data></no-data>
+                                </td>
+                            </tr>
+                        </tfoot>
+                    </table>
+                    <div class="tasty-pagination-responsive" tasty-pagination=""></div>
+                </div>
+                <hr><a class="btn btn-default" href="#!{{path}}/crear"><i class="fa fa-plus"></i> Agregar</a></section>
+        </section>
+    </div>
 </div>
