se corrige el layout del view

--- a/src/partials/templates/view-template.html
+++ b/src/partials/templates/view-template.html
@@ -1,5 +1,5 @@
 <!-- @autor:juan benitez   @mail:juan.benitez@konecta.com.py -->
-<div class="col-md-12">
+<div class="row">
     <br/>
     <breadcrumb-directive></breadcrumb-directive>
     <section class="col-md-12">
