bugFixed, se actualiza el número de versión

--- a/src/partials/templates/list-template.html
+++ b/src/partials/templates/list-template.html
@@ -39,9 +39,10 @@
                     </table>
                     <div class="tasty-pagination-responsive" tasty-pagination=""></div>
                 </div>
-                <div ng-if="footer" >
-                <hr><a class="btn btn-default" href="#!{{path}}/crear"><i class="fa fa-plus"></i> Agregar</a></section>
+                <div ng-if="footer">
+                    <hr><a class="btn btn-default" href="#!{{path}}/crear"><i class="fa fa-plus"></i> Agregar</a>
                 </div>
+            </section>
         </section>
     </div>
 </div>
@@ -86,7 +87,9 @@
                     </table>
                     <div class="tasty-pagination-responsive" tasty-pagination=""></div>
                 </div>
-                <hr>< ng-if="footer" a class="btn btn-default" href="#!{{path}}/crear"><i class="fa fa-plus"></i> Agregar</a></section>
+                <hr>
+                < ng-if="footer" a class="btn btn-default" href="#!{{path}}/crear"><i class="fa fa-plus"></i> Agregar</a>
+            </section>
         </section>
     </div>
 </div>
