se añade el class para el header versión full

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -105,6 +105,12 @@ ul.alert-dropdown {
         left: 178px;
     }
 }
+//viste normal
+.no-compress {
+    &.page-wrapper {
+        padding-left: 15px;
+    }
+}
 //para la vista reducida
 .compress {
     &.page-wrapper {
