se resuelve el bug del selector del tamaño de las páginas en las grillas

--- a/src/scss/_tasty.scss
+++ b/src/scss/_tasty.scss
@@ -44,7 +44,8 @@ thead[tasty-thead] {
         }
     }
 }
-.tasty-pagination-responsive {
+.tasty-pagination-responsive,
+tasty-pagination {
     .row {
         .col-xs-3.text-right {
             display: none
