Se agregan componentes por defectos para template

--- a/src/partials/templates/view-template.html
+++ b/src/partials/templates/view-template.html
@@ -9,14 +9,13 @@
                 <p ng-transclude="descripcion">Cambiar Descripcion</p>
             </div>
             <form class="wrapper form-horizontal" role="form">
-                <dl class="dl-horizontal" ng-transclude="view">
-                </dl>
+                <dl class="dl-horizontal" ng-transclude="view"> Agregar View</dl>
                 <hr>
             </form>
             <hr/>
             <a href="#!{{path}}" class="btn btn-default">
-            <i class="fa fa-mail-reply" aria-hidden="true"></i> Atras
-        </a>
+                <i class="fa fa-mail-reply" aria-hidden="true"></i> Atras
+            </a>
         </section>
     </section>
 </div>
