--- a/src/partials/templates/form-template.html
+++ b/src/partials/templates/form-template.html
@@ -9,7 +9,7 @@
                 <p ng-transclude="descripcion">Cambiar descripcion</p>
             </div>
             <section class="wrapper form-horizontal" role="form">
-                <div ng-transclude="form"></div>
+                <div ng-transclude="form">Agregar Form</div>
                 <hr>
                 <button type="button" class="btn btn-primary" ng-disabled="disabledButtonSave" ng-click="guardar()">
                     <i class="fa fa-floppy-o"></i>&nbsp;{{!disabledButtonSave ? 'Guardar' : 'En Proceso...'}}
