Ajustes en directiva breadcrumb

--- a/src/partials/templates/breadcrumb.html
+++ b/src/partials/templates/breadcrumb.html
@@ -1,4 +1,4 @@
-<div class="wizard col-md-12">
+<div class="wizard">
     <ul class="wizard-breadcrumbs">
         <li ng-repeat="page in breadcrumbs" ng-class="{active: $last}">
             <ng-switch on="$last">
