--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -150,10 +150,13 @@ ul.alert-dropdown {
         }
     }
 }
+
+
 .side-nav {
     .divider {
-        border-top: 1px solid $pane-border;
-        border-bottom: 1px solid transparent;
+        border-top: 1px solid darken($pane-invert-border, 5%);
+        border-bottom: 1px solid lighten($pane-invert-border, 15%);
         box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+        width: 100%;
     }
 }
