--- a/src/partials/templates/form-template.html
+++ b/src/partials/templates/form-template.html
@@ -1,7 +1,7 @@
 <!-- @autor:juan benitez   @mail:juan.benitez@konecta.com.py -->
 <div class="row">
     <br/>
-    <breadcrumb-directive></breadcrumb-directive>
+    <breadcrumb-directive class="col-md-12"></breadcrumb-directive>
     <section class="col-md-12">
         <section class="form-wrapper">
             <div class="top-block">
