BugFixed,se corrige el label del boton buscar

--- a/src/partials/templates/list-template.html
+++ b/src/partials/templates/list-template.html
@@ -16,8 +16,8 @@
                         <a class="btn btn-default" ng-click="limpiar()">
                             <i class="fa fa-ban"></i>&#xA0;Limpiar</a>
                         &nbsp;
-                        <a class="btn btn-default" ng-click="buscar()">
-                            <i class="fa fa-search"></i>&#xA0;Limpiar</a>
+                        <a class="btn btn-primary" ng-click="buscar()">
+                            <i class="fa fa-search"></i>&#xA0;Buscar</a>
                     </div>
 
                 </div>
