--- a/src/scss/_tasty.scss
+++ b/src/scss/_tasty.scss
@@ -59,3 +59,9 @@ tasty-pagination {
 tfoot {
     background: white;
 }
+.tasty-col-filter {
+    height: 50px;
+}
+.tasty-head-invisible {
+    display: none;
+}
